--- a/client/public/index.html
+++ b/client/public/index.html
@@ -19,9 +19,15 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+   
+    <link rel="stylesheet" href="assets/reset.css">
+    <link rel="stylesheet" href="assets/app.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500|Satisfy" rel="stylesheet">
+
+
     <title>React App</title>
   </head>
-  <body>
+  <body background="assets/fancy-cushion/fancy-cushion.png">
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
