--- a/client/public/index.html
+++ b/client/public/index.html
@@ -20,8 +20,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
    
-    <link rel="stylesheet" href="assets/reset.css">
-    <link rel="stylesheet" href="assets/app.css">
+    <link rel="stylesheet" href="./assets/reset.css">
+    <link rel="stylesheet" href="./assets/app.css">
+    <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.5/leaflet.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500|Satisfy" rel="stylesheet">
 
 
