--- a/client/public/index.html
+++ b/client/public/index.html
@@ -22,18 +22,21 @@
     -->
 
   <link rel="stylesheet" href="assets/reset.css">
+  <link href="https://fonts.googleapis.com/css?family=Yellowtail" rel="stylesheet">
   <link rel="stylesheet" href="assets/app.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500|Satisfy" rel="stylesheet">
 
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
   <title>CLSR</title>
 </head>
 
-<body background="assets/fancy-cushion/cubes.png">
+<body>
+  <div id="gradient">
   <noscript>
     You need to enable JavaScript to run this app.
   </noscript>
   <div id="root"></div>
+</div>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -44,6 +47,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="background.js"></script>
 </body>
 
 </html>
