I changed the user interface on the home page and created a background fade component

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="theme-color" content="#000000">
   <!--
@@ -29,7 +30,8 @@
   <title>CLSR</title>
 </head>
 
-<body background="assets/fancy-cushion/cubes.png">
+<body>
+  <!-- background="assets/fancy-cushion/cubes/clsr.jpg" style="background-repeat: no-repeat; background-size: cover;"> -->
   <noscript>
     You need to enable JavaScript to run this app.
   </noscript>
